<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>chatroom</name>
  <version>0.0.1</version>
  <description>A simple multi-user chat system using ROS2</description>

  <maintainer email="vedhasbachar@gmail.com">Vedhas</maintainer>
  <license>Apache-2.0</license>  <!-- 🔥 Change TODO to a valid license -->

  <!-- Build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

